Add Room and remove warnings